--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngxs-forms-example",
+  "name": "ngxs-form-example",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,44 +11,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0",
-    "@angular/cdk": "^6.0.2",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
-    "@angular/material": "^6.0.2",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
-    "@ngxs/devtools-plugin": "^3.0.1",
-    "@ngxs/form-plugin": "^3.0.1",
-    "@ngxs/store": "^3.0.1",
-    "core-js": "^2.5.4",
-    "material-design-icons-iconfont": "^3.0.3",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "@angular/animations": "~9.0.0-rc.5",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "~9.0.0-rc.5",
+    "@angular/compiler": "~9.0.0-rc.5",
+    "@angular/core": "~9.0.0-rc.5",
+    "@angular/forms": "~9.0.0-rc.5",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "~9.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "~9.0.0-rc.5",
+    "@angular/router": "~9.0.0-rc.5",
+    "@ngxs/devtools-plugin": "^3.5.1",
+    "@ngxs/form-plugin": "^3.5.1",
+    "@ngxs/store": "^3.5.1",
+    "rxjs": "~6.5.3",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/cli": "~6.0.1",
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular/language-service": "^6.0.0",
-    "@types/jasmine": "~2.8.6",
+    "@angular-devkit/build-angular": "~0.900.0-rc.5",
+    "@angular/cli": "~9.0.0-rc.5",
+    "@angular/compiler-cli": "~9.0.0-rc.5",
+    "@angular/language-service": "~9.0.0-rc.5",
+    "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "karma": "~4.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
+    "typescript": "~3.6.4"
   }
 }
