--- a/package.json
+++ b/package.json
@@ -11,42 +11,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.0-rc.5",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "~9.0.0-rc.5",
-    "@angular/compiler": "~9.0.0-rc.5",
-    "@angular/core": "~9.0.0-rc.5",
-    "@angular/forms": "~9.0.0-rc.5",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~9.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.5",
-    "@angular/router": "~9.0.0-rc.5",
-    "@ngxs/devtools-plugin": "^3.5.1",
-    "@ngxs/form-plugin": "^3.5.1",
-    "@ngxs/store": "^3.5.1",
-    "rxjs": "~6.5.3",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "~9.1.4",
+    "@angular/cdk": "^9.2.2",
+    "@angular/common": "~9.1.4",
+    "@angular/compiler": "~9.1.4",
+    "@angular/core": "~9.1.4",
+    "@angular/forms": "~9.1.4",
+    "@angular/material": "^9.2.2",
+    "@angular/platform-browser": "~9.1.4",
+    "@angular/platform-browser-dynamic": "~9.1.4",
+    "@angular/router": "~9.1.4",
+    "@ngxs/devtools-plugin": "^3.6.2",
+    "@ngxs/form-plugin": "^3.6.2",
+    "@ngxs/store": "^3.6.2",
+    "rxjs": "~6.5.5",
+    "tslib": "^1.11.1",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.5",
-    "@angular/cli": "~9.0.0-rc.5",
-    "@angular/compiler-cli": "~9.0.0-rc.5",
-    "@angular/language-service": "~9.0.0-rc.5",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/build-angular": "~0.901.4",
+    "@angular/cli": "~9.1.4",
+    "@angular/compiler-cli": "~9.1.4",
+    "@angular/language-service": "~9.1.4",
+    "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "@types/node": "^13.13.4",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.3.0",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "~5.0.4",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.2",
-    "ts-node": "~8.3.0",
-    "tslint": "~5.18.0",
-    "typescript": "~3.6.4"
+    "karma-coverage-istanbul-reporter": "~3.0.0",
+    "karma-jasmine": "~3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.3",
+    "protractor": "~5.4.4",
+    "ts-node": "~8.10.1",
+    "tslint": "~6.1.2",
+    "typescript": "~3.8.3"
   }
 }
